working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1223,7 +1223,12 @@
           </table>
           <p class="dungeon_table_notes">* Escape Scrolls are always found identified, and only appear on 30F, 50F, and 70F.</p>
           <h3 id="other">Grass</h3>
-          <p>Text</p>
+          <p>Typically identified by checking prices inside a shop.</p>
+          <p>Mr. Drone family monsters will always drop the following grasses:<br>Mr. Drone = Strength Grass, Mr. Helico = Happy Grass, Mr. Gyro = Revival Grass.</p>
+          <p>Revival Grass will activate even if it's in an unidentified state, as long as it's not inside a pot.</p>
+          <p>There are many nice grasses in the 500G price range such as Dragon Grass, Sight Grass, and Otogiriso,<br>so it's better to keep them on hand for emergencies or synthesis early game instead of eating them right away.</p>
+          <p>Twisty Grass, Shrink Seed, and Poison Grass are the only negative effect grasses that can be found on the ground.<br>Super Unlucky Seed is a shop exclusive, and Unlucky Seed is only found in shops or from Presto Pots.<br>So there isn't much risk in eating grasses to identify them. However, you'll want to avoid doing so<br>to prevent accidentally eating a Herb or Life Grass before synthesizing a Healing Sword.</p>
+          <p>If you arrive at a floor with Mixer monsters without having been able to identify your grass items,<br>you can still synthesize them in hopes of one of them being a Healing Sword ingredient.<br>Throw an unneeded weapon at a Mixer, and then throw the grass item you want to identify.<br>If the synthesis worked, you can check the seal and make note of it,<br>and if it didn't, you can go ahead and eat the grass to identify it.</p>
           <p>Grass price chart:</p>
           <table>
             <tr>
@@ -1236,117 +1241,116 @@
               <td>Weeds</td>
               <td>50</td>
               <td>25</td>
-              <td></td>
+              <td>★ Always found identified.</td>
             </tr>
             <tr>
               <td>Herb</td>
               <td>100</td>
               <td>50</td>
-              <td></td>
+              <td>★ Identified by price.<br>Appears in shops between 71~90F.</td>
             </tr>
             <tr>
               <td>Twisty Grass</td>
               <td rowspan="3">300</td>
               <td rowspan="3">150</td>
-              <td></td>
+              <td rowspan="3">Safe to eat after Twisty Grass is identified.<br>Avoid eating merchandise in case it's a Warp Grass.</td>
             </tr>
             <tr>
               <td>Swift Grass</td>
-              <td></td>
             </tr>
             <tr>
               <td>Warp Grass</td>
-              <td></td>
             </tr>
             <tr>
               <td>Life Grass</td>
               <td rowspan="5">400</td>
               <td rowspan="5">200</td>
-              <td></td>
+              <td rowspan="4">Don't eat until Life Grass is identified.<br>Shrink and Super Unlucky seeds appear in shops between 71~90F.<br>However, Traders can have Shrink Seeds for sale on earlier floors.</td>
             </tr>
             <tr>
               <td>Antidote Grass</td>
-              <td></td>
             </tr>
             <tr>
               <td>Expand Seed</td>
-              <td></td>
             </tr>
             <tr>
               <td>Shrink Seed</td>
-              <td></td>
             </tr>
             <tr>
               <td>Super Unlucky Seed</td>
-              <td></td>
+              <td>★ Shop exclusive, and only found between 71~90F.<br>Don't eat 400G grasses found in shops after 70F.</td>
             </tr>
             <tr>
               <td>Talking Seed</td>
               <td>500</td>
               <td>100</td>
-              <td></td>
+              <td>★ Identified by selling price.<br>Don't eat it while you're inside a shop.</td>
             </tr>
             <tr>
               <td>Otogiriso</td>
               <td rowspan="3">500</td>
               <td rowspan="3">250</td>
-              <td></td>
+              <td rowspan="3">Safe to eat 500G grasses with a 250G selling price.<br>Otogiriso and Dragon Grass appear in shops between 71~90F.<br>So 500G grasses found in shops before 71F<br>are either Sight Grass or Talking Seed.</td>
             </tr>
             <tr>
               <td>Sight Grass</td>
-              <td></td>
             </tr>
             <tr>
               <td>Dragon Grass</td>
-              <td></td>
             </tr>
             <tr>
               <td>Flame Grass</td>
               <td>700</td>
               <td>350</td>
-              <td></td>
+              <td rowspan="2">★ Identified by price.</td>
             </tr>
             <tr>
               <td>Boost Grass</td>
               <td>1000</td>
               <td>500</td>
-              <td></td>
             </tr>
             <tr>
               <td>Strength Grass</td>
               <td rowspan="2">1500</td>
               <td rowspan="2">700</td>
-              <td></td>
+              <td rowspan="2">Strength Grass can be identified by defeating Mr. Drone.</td>
             </tr>
             <tr>
               <td>Poison Grass</td>
-              <td></td>
             </tr>
             <tr>
               <td>Happy Grass</td>
               <td rowspan="2">2000</td>
               <td rowspan="2">1000</td>
-              <td></td>
+              <td>Happy Grass if you found it on the ground, or in a shop before 71F.<br>Mr. Helico sometimes drops Happy Grass when defeated.</td>
             </tr>
             <tr>
               <td>Unlucky Seed</td>
-              <td></td>
+              <td>★ Appears in shops between 71~90F, or obtained from Presto Pots.<br>However, a 2000G grass from a Presto Pot might be Happy Grass.</td>
             </tr>
             <tr>
               <td>Revival Grass</td>
               <td>2500</td>
               <td>1250</td>
-              <td></td>
+              <td rowspan="2">★ Identified by price.</td>
             </tr>
             <tr>
               <td>Angel Seed</td>
               <td>3000</td>
               <td>1500</td>
-              <td></td>
             </tr>
           </table>
           <h3 id="other">Pot</h3>
-          <p>Text</p>
+          <p>Typically identified by checking prices inside a shop.<br>There are only 6 pots that cannot be identified after picking them up.</p>
+          <p>If you don't want to wait for a shop to identify them:</p>
+          <ul>
+            <li>Insert an unneeded unidentified weapon or shield.<br>→ Identify, Presto, or Sticky pots are checked.</li>
+          </ul>
+          <p>After that, if the pot had a size of 5~6, it's either a Degrade or Grass Effect pot.<br>If you want to get the most out of a potential Synthesis Pot, stop here.</p>
+          <ul>
+            <li>Insert an unneeded identified weapon or shield of the same category as earlier.<br>→ Synthesis, Degrade, and Grass Effect pots are checked.</li>
+          </ul>
+          <p>Grass Effect Pot is somewhat useless, so use it as storage for items to sell in a shop.</p>
           <p>Pot price chart:</p>
           <table>
             <tr>
@@ -1359,71 +1363,75 @@
               <td>Identify Pot</td>
               <td rowspan="2">1000</td>
               <td rowspan="2">500</td>
-              <td></td>
+              <td rowspan="2">Insert an unidentifed item, or an identified weapon or shield.</td>
             </tr>
             <tr>
               <td>Degrade Pot</td>
-              <td></td>
             </tr>
             <tr>
               <td>Storage Pot</td>
               <td>1200</td>
               <td>600</td>
-              <td></td>
+              <td>★ Look inside the pot and press the L button to check for a sound effect.<br>Found in sizes 4~6.</td>
             </tr>
             <tr>
               <td>Presto Pot</td>
               <td>2000</td>
               <td>1000</td>
-              <td></td>
+              <td>★ Identified by price. Found in sizes 3~5.</td>
             </tr>
             <tr>
               <td>Sticky Pot</td>
               <td rowspan="2">3000</td>
               <td rowspan="2">1500</td>
-              <td></td>
+              <td rowspan="2">★ Water Pot is identified when you select [Insert].</td>
             </tr>
             <tr>
               <td>Water Pot</td>
-              <td></td>
             </tr>
             <tr>
               <td>Grass Effect Pot</td>
               <td>4000</td>
               <td>2000</td>
-              <td></td>
+              <td>★ Identified by price.</td>
             </tr>
             <tr>
               <td>Synthesis Pot</td>
               <td>8000</td>
               <td>4000</td>
-              <td></td>
+              <td>★ Identified by price. Found in sizes 2~4.<br>Guaranteed to be a Synthesis Pot if a pot with a size of 2 is found.</td>
             </tr>
             <tr>
               <td>Upgrade Pot</td>
               <td>15000</td>
               <td>7500</td>
-              <td></td>
+              <td>★ Shop exclusive, and identified by price.<br>Appears in shops between 71~90F.</td>
             </tr>
             <tr>
               <td>Surprise Pot</td>
               <td>3000</td>
               <td>1500</td>
-              <td></td>
+              <td>★ Always found with a size of 0.</td>
             </tr>
             <tr>
               <td>Monster Pot</td>
               <td>10000</td>
               <td>1</td>
-              <td></td>
+              <td>★ Always found identified.</td>
             </tr>
           </table>
           <h2 id="floor_guide">Floor Guide</h2>
+          <p>The beginning of this dungeon is generally the most difficult part due to enemies having<br>high attack stats, along with not being able to obtain riceballs using a Nigiri Morph until 9F.<br>It usually calms down from about mid game, but don't let your guard down when things are going well.</p>
           <h3 id="waterfall_basin">01~04F</h3>
           <h4>Basics</h4>
-          <p></p>
+          <p>Explore every room and pick up every item you find.<br>Generally aim to have Shiren's level equal the current floor number + 2 until mid game.<br>You could proceed to 2F at level 2 if you're concerned about hunger, but it might take up to 3 hits<br>to defeat Ashigarudon and Yamikichi on 2F if you do so.</p>
+          <p>Try to move in ways that reduces the number of steps you have to take to check each room.<br>Walking diagonally is a given, but also watch for terrain patterns to recognize dead ends or loops.<br>There's a smaller chance of stepping on Pitfalls or Flood Traps with fewer steps, along with conserving fullness.</p>
+          <p>Monster Houses can appear between 2~99F, but don't appear between 7~10F.<br>Shops can appear between 2~90F, and Traders can appear between 4~83F.<br>Special Monster Houses can appear between 12~78F, with every 4 floors starting from 12F<br>having a higher chance than other floors of one being generated. (12F, 16F, 20F, 24F...)</p>
           <h4>Monsters</h4>
-          <p></p>
+          <p>Most monsters only use regular attacks, but Shiren doesn't have much HP yet, so you can collapse pretty easily.<br><strong>Mamels and Pit Mamels are always generated awake</strong>, so it's common to fight many of them in a row on 1F.<br>Avoid dashing inside rooms so that monsters don't get the first hit.<br>That said, you can enter the dungeon again right away even if you collapse,<br>so you could chalk it up to bad luck and not worry too much about playing carefully yet.</p>
+          <p>Snacky (1~19F) occasionally spawns a Mid Chintala or Cave Mamel when it's defeated by a monster.<br>It has a higher chance of appearing on 1F than other floors due to the smaller monster table.<br>If a Chintala (1~2F) levels up into a Mid Chintala, it's usually best to just head for the stairs.</p>
+          <p>However, if a Pit Mamel (1~3F) levels up into a Cave Mamel, you should try to defeat it for 500 experience points.<br>Cave Mamels have very high attack and defense but only have 5 HP,<br>so you can easily defeat it by throwing Gitan, swinging a Knockback Staff, etc.<br>If you managed to defeat one, you'll jump to level 8~9 or so, making early game much easier.</p>
+          <p>Slugs (3~5F) can lower your strength, so you'll want to use projectiles or staves<br>to defeat them before they have a chance to use their special attacks if possible.<br>You won't be able to restore lost strength until Antidote Grass is identified.</p>
           <h4>Cave Mamel Hunting</h4>
           <p></p>
           <h4>Items</h4>
