working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1433,11 +1433,47 @@
           <p>However, if a Pit Mamel (1~3F) levels up into a Cave Mamel, you should try to defeat it for 500 experience points.<br>Cave Mamels have very high attack and defense but only have 5 HP,<br>so you can easily defeat it by throwing Gitan, swinging a Knockback Staff, etc.<br>If you managed to defeat one, you'll jump to level 8~9 or so, making early game much easier.</p>
           <p>Slugs (3~5F) can lower your strength, so you'll want to use projectiles or staves<br>to defeat them before they have a chance to use their special attacks if possible.<br>You won't be able to restore lost strength until Antidote Grass is identified.</p>
           <h4>Cave Mamel Hunting</h4>
-          <p></p>
+          <p>Level up a Pit Mamel into a Cave Mamel between 1~3F for experience points.</p>
+          <ul>
+            <li>If you find a Snacky, let a Pit Mamel defeat it.</li>
+            <li>Swing a Happy Staff at a Pit Mamel.</li>
+            <li>Use a Knockback Statue to have a Pit Mamel defeat another one with knockback damage.</li>
+          </ul>
+          <pre class="dungeon_diagram">
+
+    S:Shiren  P:Pit Mamel
+    □□□
+    PSP  Shiren will fly at a Pit Mamel every time he's hit, 
+    □□□  causing one of them to defeat the other and level up.
+          </pre>
+          <dl>
+            <dt>Defeating Cave Mamel</dt>
+            <dd>Strategies in ascending order of low risk to high risk.
+              <ul class="cave_mamel_list">
+                <li>Use staves. Easy to identify beforehand, multiple uses, can be used from a distance, and 100% accuracy.</li>
+                <li>Throw 50 or more Gitan. Gitan can be carried around by inserting it into a Storage Pot.</li>
+                <li>Roll a Cannonball to deal 40 damage. Just be careful not to get hit by the explosion yourself.<br>There's a chance it will miss, so it's safer to roll it at a wall instead of directly at Cave Mamel.</li>
+                <li>Use a regular attack in a room where a 10 Damage Statue is present.</li>
+                <li>Use regular attacks in a room where a Knockback Statue is present.</li>
+                <li>Shoot 5 arrows at it. Arrows can miss, so you'll want to be at least 7 tiles away to be safe.<br>You could also use another monster to block the entrance of a room to defeat it safely.</li>
+                <li>Throw a shield with at least 5 defense.</li>
+                <li>Throw a Storage Pot with enough items inside to deal 5 damage.</li>
+                <li>Throw 5 items that can damage it.</li>
+                <li>Use traps. Poison Arrow Trap will lower its strength to 0. Landmines will defeat it, but you won't gain experience.</li>
+                <li>Use an Explosion or Bomber statue to defeat it. However, you won't gain experience.</li>
+                <li>Throw grass at it, or eat a grass item next to it in hopes of it being Swift, Dragon, or Flame grass, Talking Seed, etc.</li>
+                <li>Read a scroll. Place it on the ground to check for Sanctuary Scroll first,<br>and then read it when Cave Mamel is next to you in case it's a Fear Scroll.</li>
+              </ul>
+            </dd>
+          </dl>
           <h4>Items</h4>
-          <p></p>
+          <p>The biggest issue at this point in the game is hunger.<br>If you find items like Large Riceball, Giant Riceball, or Leather Shield, it's best to check for traps<br>so that you don't accidentally step on a Flood or Spoil trap and let the food go to waste.<br>Keep food safe by storing it inside pots like Storage Pot, Degrade Pot, and Grass Effect Pot.</p>
+          <p>Wait to identify items until you find a shop or Identify Pot. You don't want to accidentally eat a Revival Grass.</p>
+          <p>Having cursed equipment is better than no equipment, so go ahead and equip the first items you find.<br>However, avoid equipping weak items like Club, or items with negative effects like Heavy Shield.<br>Keep a second weapon on hand to use as a base for making a Healing Sword.</p>
+          <p>Don't immediately pick up Gitan on 1F, since it can be used to hunt Cave Mamels for experience points.<br>Snacky spawns less on 2~3F and often gets defeated by other monsters, so it's fine to pick up Gitan there.</p>
+          <p>If you come across a Trip Statue, collect items from enemies until the wind blows. Just be careful of hunger.</p>
           <h3 id="hoof_rock_wall">05~08F</h3>
-          <p></p>
+          <p>Text</p>
           <h4>Obtain Items w/Armordillo Pop</h4>
           <p></p>
           <h4>Obtain Iron Arrows</h4>
