working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1422,17 +1422,17 @@
           </table>
           <h2 id="floor_guide">Floor Guide</h2>
           <p>The beginning of this dungeon is generally the most difficult part due to enemies having<br>high attack stats, along with not being able to obtain riceballs using a Nigiri Morph until 9F.<br>It usually calms down from about mid game, but don't let your guard down when things are going well.</p>
-          <h3 id="waterfall_basin">01~04F</h3>
-          <h4>Basics</h4>
+          <h3 id="floor_1_4">01~04F</h3>
+          <h4 id="floor_1_4_basics">Basics</h4>
           <p>Explore every room and pick up every item you find.<br>Generally aim to have Shiren's level equal the current floor number + 2 until mid game.<br>You could proceed to 2F at level 2 if you're concerned about hunger, but it might take up to 3 hits<br>to defeat Ashigarudon and Yamikichi on 2F if you do so.</p>
           <p>Try to move in ways that reduces the number of steps you have to take to check each room.<br>Walking diagonally is a given, but also watch for terrain patterns to recognize dead ends or loops.<br>There's a smaller chance of stepping on Pitfalls or Flood Traps with fewer steps, along with conserving fullness.</p>
           <p>Monster Houses can appear between 2~99F, but don't appear between 7~10F.<br>Shops can appear between 2~90F, and Traders can appear between 4~83F.<br>Special Monster Houses can appear between 12~78F, with every 4 floors starting from 12F<br>having a higher chance than other floors of one being generated. (12F, 16F, 20F, 24F...)</p>
-          <h4>Monsters</h4>
+          <h4 id="floor_1_4_monsters">Monsters</h4>
           <p>Most monsters only use regular attacks, but Shiren doesn't have much HP yet, so you can collapse pretty easily.<br><strong>Mamels and Pit Mamels are always generated awake</strong>, so it's common to fight many of them in a row on 1F.<br>Avoid dashing inside rooms so that monsters don't get the first hit.<br>That said, you can enter the dungeon again right away even if you collapse,<br>so you could chalk it up to bad luck and not worry too much about playing carefully yet.</p>
           <p>Snacky (1~19F) occasionally spawns a Mid Chintala or Cave Mamel when it's defeated by a monster.<br>It has a higher chance of appearing on 1F than other floors due to the smaller monster table.<br>If a Chintala (1~2F) levels up into a Mid Chintala, it's usually best to just head for the stairs.</p>
           <p>However, if a Pit Mamel (1~3F) levels up into a Cave Mamel, you should try to defeat it for 500 experience points.<br>Cave Mamels have very high attack and defense but only have 5 HP,<br>so you can easily defeat it by throwing Gitan, swinging a Knockback Staff, etc.<br>If you managed to defeat one, you'll jump to level 8~9 or so, making early game much easier.</p>
           <p>Slugs (3~5F) can lower your strength, so you'll want to use projectiles or staves<br>to defeat them before they have a chance to use their special attacks if possible.<br>You won't be able to restore lost strength until Antidote Grass is identified.</p>
-          <h4>Cave Mamel Hunting</h4>
+          <h4 id="cave_mamel_hunting">Cave Mamel Hunting</h4>
           <p>Level up a Pit Mamel into a Cave Mamel between 1~3F for experience points.</p>
           <ul>
             <li>If you find a Snacky, let a Pit Mamel defeat it.</li>
@@ -1466,67 +1466,71 @@
               </ul>
             </dd>
           </dl>
-          <h4>Items</h4>
+          <h4 id="floor_1_4_items">Items</h4>
           <p>The biggest issue at this point in the game is hunger.<br>If you find items like Large Riceball, Giant Riceball, or Leather Shield, it's best to check for traps<br>so that you don't accidentally step on a Flood or Spoil trap and let the food go to waste.<br>Keep food safe by storing it inside pots like Storage Pot, Degrade Pot, and Grass Effect Pot.</p>
           <p>Wait to identify items until you find a shop or Identify Pot. You don't want to accidentally eat a Revival Grass.</p>
           <p>Having cursed equipment is better than no equipment, so go ahead and equip the first items you find.<br>However, avoid equipping weak items like Club, or items with negative effects like Heavy Shield.<br>Keep a second weapon on hand to use as a base for making a Healing Sword.</p>
           <p>Don't immediately pick up Gitan on 1F, since it can be used to hunt Cave Mamels for experience points.<br>Snacky spawns less on 2~3F and often gets defeated by other monsters, so it's fine to pick up Gitan there.</p>
           <p>If you come across a Trip Statue, collect items from enemies until the wind blows. Just be careful of hunger.</p>
-          <h3 id="hoof_rock_wall">05~08F</h3>
-          <p>Text</p>
-          <h4>Obtain Items w/Armordillo Pop</h4>
+          <h3 id="floor_5_8">05~08F</h3>
+          <p>Waterways are commonly found between 5~8F, and monster special attacks become more varied.</p>
+          <p>If an Armordillo or Armordillo Bro (5~6F) makes you trip and drop items in water, the items are likely to be lost.<br>Monsters like Spearfish (5~8F), Lt. Spearfish (6~8F), Capt. Spearfish (8F) can move underwater.<br>The latter two can attack from inside water, and Capt. Spearfish has 50 HP, making it particularly tough.<br>It might be a good idea to recover HP in a room before going into hallways that are surrounded by water.</p>
+          <p>Mr. Drone (7~9F) makes an appearance. It always drops Strength Grass, so try to defeat it before it runs away.<br>It's ideal to save Strength Grass until you find Boost Grass and a Grass Gain Staff to increase gains,<br>but you could eat some if your inventory is full. Just be sure to save 1 Strength Grass for a Grass Gain Staff later on.</p>
+          <p>Limit the amount of time you spend in hallways on 8F to reduce the risk of Gazer (6~8F) or Scorpion (8F)<br>surprising you with their special attack, which either forces you to use an item, or lowers your strength.<br>Scorpion and Capt. Spearfish only appear on 8F, so you could rush to the stairs if you don't want to deal with them.</p>
+          <p>There's a 25% chance for Golden Stairs to be generated inside a wall between 6~10F, so this floor range<br>is a good time to read unidentified scrolls, in case one of them happens to be a Wall Collapse Scroll.<br>However, you'll return to 11F after exiting the first Golden Interval, so if you go too early, you'll miss out on<br>being able to use Nigiri Morphs to make riceballs, along with 2 floors worth of Mixer spawns.<br>Food cannot be found inside the Golden Interval, so there is some risk of starving to death as well.</p>
+          <h4 id="floor_5_8_armordillo_items">Obtain Items w/Armordillo Pop</h4>
           <p></p>
-          <h4>Obtain Iron Arrows</h4>
+          <h4 id="floor_5_8_arrows">Obtain Iron Arrows</h4>
           <p></p>
-          <h3 id="mountain_cave">09~12F</h3>
+          <h3 id="floor_9_12">09~12F</h3>
           <p></p>
-          <h4>Food Related (Nigiri Morph + Mixer)</h4>
+          <h4 id="floor_9_12_food">Food Related (Nigiri Morph + Mixer)</h4>
           <p></p>
-          <h4>Monsters</h4>
+          <h4 id="floor_9_12_monsters">Monsters</h4>
           <p></p>
-          <h4>Other Tips</h4>
+          <h4 id="floor_9_12_other">Other Tips</h4>
           <p></p>
-          <h3 id="dark_night_cavern">13~15F</h3>
+          <h3 id="floor_13_15">13~15F</h3>
           <p></p>
-          <h3 id="dark_night_cavern">16~21F</h3>
+          <h3 id="floor_16_21">16~21F</h3>
           <p></p>
-          <h4 id="queen_spider_stats">Twisty Hani Hunting</h4>
+          <h4 id="floor_16_21_twisty_hani">Twisty Hani Hunting</h4>
           <p></p>
-          <h3 id="cliff_wind_hole">22~29F</h3>
+          <h3 id="floor_22_29">22~29F</h3>
           <p></p>
-          <h4 id="queen_spider_stats">Monsters (22~24F)</h4>
+          <h4 id="floor_22_29_monsters_1">Monsters (22~24F)</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Monsters (25~29F)</h4>
+          <h4 id="floor_22_29_monsters_2">Monsters (25~29F)</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Golden Interval</h4>
+          <h4 id="floor_22_29_golden">Golden Interval</h4>
           <p></p>
-          <h3 id="ancient_ruins">30~39F</h3>
+          <h3 id="floor_30_39">30~39F</h3>
           <p></p>
-          <h4 id="queen_spider_stats">Monsters</h4>
+          <h4 id="floor_30_39_monsters">Monsters</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Preparing for the Second Half</h4>
+          <h4 id="floor_30_39_preparing">Preparing for the Second Half</h4>
           <p></p>
-          <h3 id="headwater_cave">40~49F</h3>
+          <h3 id="floor_40_49">40~49F</h3>
           <p></p>
-          <h3 id="headwater_cave">50~59F</h3>
+          <h3 id="floor_50_59">50~59F</h3>
           <p></p>
-          <h4 id="queen_spider_stats">Monsters</h4>
+          <h4 id="floor_50_59_monsters">Monsters</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Obtaining More Items</h4>
+          <h4 id="floor_50_59_more_items">Obtaining More Items</h4>
           <p></p>
-          <h4 id="queen_spider_stats">Mr. Drone Hunting</h4>
+          <h4 id="floor_50_59_mr_drone">Mr. Drone Hunting</h4>
           <p></p>
-          <h3 id="headwater_cave">60~69F</h3>
+          <h3 id="floor_60_69">60~69F</h3>
           <p></p>
-          <h3 id="headwater_cave">70~85F</h3>
+          <h3 id="floor_70_85">70~85F</h3>
           <p></p>
-          <h3 id="headwater_cave">86~99F</h3>
+          <h3 id="floor_86_99">86~99F</h3>
           <p></p>
-          <h4 id="queen_spider_stats">86~90F</h4>
+          <h4 id="floor_86_90">86~90F</h4>
           <p></p>
-          <h4 id="queen_spider_stats">90F+</h4>
+          <h4 id="floor_90">90F+</h4>
           <p></p>
-          <h3 id="headwater_cave">The End</h3>
+          <h3 id="floor_end">The End</h3>
           <p></p>
           <h2 id="monsters">Monsters</h2>
           <div class="road_to_the_end_monster_table">
