working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -64,8 +64,8 @@
                   </ul>
                   <li><a href="#mountain_cave">05~08F</a></li>
                   <ul>
-                    <li><a href="#waterfall_basin">Obtain Items w/Armordillo Pop</a></li>
-                    <li><a href="#waterfall_basin">Obtain Iron Arrows</a></li>
+                    <li><a href="#waterfall_basin">Obtaining Items w/Armordillo Pop</a></li>
+                    <li><a href="#waterfall_basin">Obtaining Iron Arrows</a></li>
                   </ul>
                   <li><a href="#hoof_rock_wall">9~12F</a></li>
                   <ul>
@@ -1477,13 +1477,58 @@
           <p>If an Armordillo or Armordillo Bro (5~6F) makes you trip and drop items in water, the items are likely to be lost.<br>Monsters like Spearfish (5~8F), Lt. Spearfish (6~8F), Capt. Spearfish (8F) can move underwater.<br>The latter two can attack from inside water, and Capt. Spearfish has 50 HP, making it particularly tough.<br>It might be a good idea to recover HP in a room before going into hallways that are surrounded by water.</p>
           <p>Mr. Drone (7~9F) makes an appearance. It always drops Strength Grass, so try to defeat it before it runs away.<br>It's ideal to save Strength Grass until you find Boost Grass and a Grass Gain Staff to increase gains,<br>but you could eat some if your inventory is full. Just be sure to save 1 Strength Grass for a Grass Gain Staff later on.</p>
           <p>Limit the amount of time you spend in hallways on 8F to reduce the risk of Gazer (6~8F) or Scorpion (8F)<br>surprising you with their special attack, which either forces you to use an item, or lowers your strength.<br>Scorpion and Capt. Spearfish only appear on 8F, so you could rush to the stairs if you don't want to deal with them.</p>
-          <p>There's a 25% chance for Golden Stairs to be generated inside a wall between 6~10F, so this floor range<br>is a good time to read unidentified scrolls, in case one of them happens to be a Wall Collapse Scroll.<br>However, you'll return to 11F after exiting the first Golden Interval, so if you go too early, you'll miss out on<br>being able to use Nigiri Morphs to make riceballs, along with 2 floors worth of Mixer spawns.<br>Food cannot be found inside the Golden Interval, so there is some risk of starving to death as well.</p>
-          <h4 id="floor_5_8_armordillo_items">Obtain Items w/Armordillo Pop</h4>
-          <p></p>
-          <h4 id="floor_5_8_arrows">Obtain Iron Arrows</h4>
-          <p></p>
+          <p>There's a 25% chance for Golden Stairs to be generated inside a wall between 6~10F, so this floor range<br>is a good time to read unidentified scrolls, in case one of them happens to be a Wall Collapse Scroll.<br>However, you'll return to 11F after exiting the first Golden Interval, so if you go too early, you'll miss out on<br>being able to use Nigiri Morphs to make riceballs, along with 2 floors worth of Mixer spawns.<br>Food cannot be found inside the Golden Interval, so there is some risk of collapsing from starvation too.</p>
+          <h4 id="floor_5_8_armordillo_items">Obtaining Items w/Armordillo Pop</h4>
+          <p>If you have a Posession Staff or Monster Pot, you can level up an Armordillo Bro into an Armordillo Pop<br>between 5~6F to collect items by making enemies trip using their special attack.<br>It's very rare to find a Monster Pot this early, but if you do find one, be sure to capture an Armordillo Pop here,<br>because the ability to generate additional items on every floor greatly increases the chance of clearing the dungeon.<br>Posession Staves are much more common than Monster Pots, and will still let you collect items for 2 floors.</p>
+          <pre class="dungeon_diagram">
+
+    S:Shiren  A:Armordillo Bro
+    □□□  
+    ASA  Shiren will fly at an Armordillo Bro when tackled,
+    □□□  causing one of them to defeat the other and level up.
+
+    If you have a Posession Staff, simply have an Armordillo Bro defeat a posessed monster.
+          </pre>
+          <h4 id="floor_5_8_arrows">Obtaining Iron Arrows</h4>
+          <p>Make use of Boy Carts between 7~9F to collect Iron Arrows.</p>
+          <dl>
+            <dt>Posession Staff</dt>
+            <dd>Take control of a Boy Cart and use their special attack while facing a wall.</dd>
+            <dt>Wall Collapse Scroll</dt>
+            <dd>Leave a gap of at least 10 tiles between Shiren and a Boy Cart, and collect the arrows that fall to the ground.<br>Can be difficult if your shield is weak, but you can use items like Knockback or Swap Staff to quickly gain distance.<br>If all goes well, you can expect to collect around 70 arrows per floor.</dd>
+            <dt>Terrain</dt>
+            </dl>
+            <pre class="dungeon_diagram">
+
+    ■■■■■■■■■■
+    ■■■□□□□□□■
+    ■■□□□□□□□■  Use items like Pickaxe, Tunnel Staff, and Cannonball
+    ■■□□□□□□□□  to dig out this type of room into one like the next diagram.
+    ■■□□□□□□□■
+    ■■■■■■■■■■
+          </pre>
+          <pre class="dungeon_diagram">
+
+    ■■■■■■■■■■  S:Shiren  B:Boy Cart
+    ■S■B□□□□□■  
+    ■□□□□□□□□■  The dug out portions are still considered part of the room,
+    ■□□□□□□□□□  so the Boy Cart will continue to fire arrows at the wall.
+    ■□□□□□□□□■  Many other patterns can be used, as long as the room isn't square to start with.
+    ■■■■■■■■■■
+          </pre>
+          <pre class="dungeon_diagram">
+
+    ■■■■■■■■■■  S:Shiren  B:Boy Cart
+    ■□□□□□□□■■
+    ■S■B■□■□■■  This type of room can be used without having to dig anything out.
+    ■□□□□□□□□□  Simply move in a way that keeps a wall between Shiren and the Boy Cart.
+    ■□■□■□■□■■
+    ■□□□□□□□■■
+    ■■■■■■■■■■
+          </pre>
+          </dl>
           <h3 id="floor_9_12">09~12F</h3>
-          <p></p>
+          <p>The first major grinding area of this dungeon.<br>Nigiri Morph (9~10F), Mixer (9~15F), and Mixermon (12~20F) make an appearance,<br>along with Boy Cart (7~9F), Mr. Helico (10F), Taishodon (10~12F), and Kengo (11~12F).<br>How you utilize these monsters will play a large role in how the rest of the adventure progresses.</p>
           <h4 id="floor_9_12_food">Food Related (Nigiri Morph + Mixer)</h4>
           <p></p>
           <h4 id="floor_9_12_monsters">Monsters</h4>
