--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -157,7 +157,7 @@
             幸 or 天 helps Shiren level up faster. Best to stack multiple seals on a secondary weapon to use early game.<br>
             仏, ド, and 竜 will increase your damage output (x1.5) against certain enemies.<br>
             眠 sometimes puts enemies to sleep (8%), allowing you to defeat them without getting hit.<br>
-            飯 or に will help prevent starving to death by making enemies drop riceballs when defeated.<br>
+            飯 or に will help prevent collapsing from starvation by making enemies drop riceballs when defeated.<br>
             サ lets you dig through walls without the weapon breaking, allowing you to create shortcuts.<br>
             金 (red) prevents rust, and protects against 1 use of Monsoon Doll's seal removing special attack.<br>
             会 sometimes deals a critical hit (35%) that deals 1.5 times the damage of a regular hit.<br>
