working on the road to the end guide

--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -1541,7 +1541,11 @@
           <p>Monsters begin to hit harder from 10F with the appearance of monsters like Ironhead, Golem, and Kengo (11~12F).<br>Either unequip your shield beforehand, or fight Kengo with your back against a wall to avoid losing your shield.</p>
           <p>Try to clear out Monster Houses when possible to obtain more items.<br>However, Special Monster Houses can appear starting on 12F, so avoid them if you see one.<br>Encountering a Porkton or Typhoon this early in the dungeon would ensure the end of your adventure.</p>
           <h4 id="floor_9_12_other">Other Tips</h4>
-          <p></p>
+          <p>Wooden Arrow Traps and Iron Arrow Traps only appear between 5~10F. Use them to collect arrows while you can.</p>
+          <p>Try reading a Wall Collapse Scroll on 9F after you explore the map and defeat some monsters.<br>You might find a Golden Stairs, and you can also collect Iron Arrows from a Boy Cart (7~9F).<br>Eat Sight Grass to remove the risk of stepping on a Pitfall on the way to the Golden Stairs.<br>Prepare Large Riceballs using a Nigiri Morph before entering the Golden Interval to avoid collapsing from hunger.</p>
+          <p>Mr. Helico makes an appearance on 10F and occasionally drops Happy Grass when defeated.<br>Don't eat the Happy Grass right away if you obtain one, but instead, throw it at another Mr. Helico<br>to level it up into a Mr. Gyro, which has a chance to drop Revival Grass when defeated.<br>Don't forget to assign a name to the unidentified Happy Grass or Revival Grass if you manage to obtain them.<br>If you have a Posession Staff, Happy Grass can also be used to level up Kengo, allowing you to obtain more equipment.</p>
+          <p>Taishodon appears between 10~12F. If you have a Grass Toss Staff, go ahead and insert Strength Grass<br>or Happy Grass and swing it at a Taishodon to have it reflect the magic bolt back at Shiren.<br>Don't forget to eat a Boost Grass beforehand, if you happen to have one on hand.</p>
+          <p>Kengo (11~12F) can be troublesome as an emeny, but they're an excellent monster that can be used to collect<br>shields if you have a Posession Staff or Monster Pot. However, you'll likely want to level Kengo up into an Iai first<br>so that you can also collect weapons, along with having higher stats so they won't be defeated as easily.<br>You could also go for Shihan instead of Iai in hopes of obtaining a Scout Bracelet.</p>
           <h3 id="floor_13_15">13~15F</h3>
           <p></p>
           <h3 id="floor_16_21">16~21F</h3>
